blue-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: blue
  name: blue
spec:
  containers:
  - image: nginx
    name: blue
    volumeMounts:
      - name: index
        mountPath: /usr/share/nginx/html
    ports:
    - containerPort: 80
    resources: {}
  volumes:
   - name: index
     configMap:
       name: blue
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
