red-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: red
  name: red
spec:
  containers:
  - image: nginx
    name: red
    volumeMounts:
      - name: index
        mountPath: /usr/share/nginx/html
    ports:
    - containerPort: 80
    resources: {}
  volumes:
   - name: index
     configMap:
       name: red
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
