blue-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: blue
    security.istio.io/tlsMode: istio
    service.istio.io/canonical-name: blue
    service.istio.io/canonical-revision: latest
  name: blue
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: blue
    security.istio.io/tlsMode: istio
    service.istio.io/canonical-name: blue
    service.istio.io/canonical-revision: latest
status:
  loadBalancer: {}
