red-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: red
    security.istio.io/tlsMode: istio
    service.istio.io/canonical-name: red
    service.istio.io/canonical-revision: latest
  name: red
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: red
    security.istio.io/tlsMode: istio
    service.istio.io/canonical-name: red
    service.istio.io/canonical-revision: latest
status:
  loadBalancer: {}
