gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: default-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
spec:
  hosts:
  - "*"
  gateways:
  - default-gateway
  http:
  - match:
     - headers:
        "@request.auth.claims.groups":
          exact: group1
    route:
    - destination:
        host: blue
        port:
          number: 80
  - match:
     - headers:
        "@request.auth.claims.sub":
          exact: testing@secure.istio.io
    route:
    - destination:
        host: red
        port:
          number: 80
